August_30/August_30/src/objects/Assigned_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Active_Practice_Resource__c</fullName>
        <formula>Contact_Name__r.Active_Practice_Resource__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Practice Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Billable_Hours_per_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <label>Actual Billable Hours per Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Billable_percent_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <formula>Actual_Billable_Hours_per_Month__c / Expected_Billable_Hours_per_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Billable % per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Roles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Billable_Hours_per_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <formula>154</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Billable Hrs per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Billable_percent_Month__c</fullName>
        <description>W-000090: Utilization information</description>
        <formula>0.885</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Billable % per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Allocation__c</fullName>
        <label>Percent Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phase_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phase Role</label>
        <referenceTo>Phase_Role__c</referenceTo>
        <relationshipLabel>Assigned Resources</relationshipLabel>
        <relationshipName>Assigned_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_Title__c</fullName>
        <formula>Project_Phase__r.Phase_Title__c</formula>
        <label>Phase Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Extension_End_Date__c</fullName>
        <label>Possible Extension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Name</label>
        <referenceTo>Projects__c</referenceTo>
        <relationshipName>Project_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>Project_Phase__c</referenceTo>
        <relationshipLabel>Assigned Resources</relationshipLabel>
        <relationshipName>Assigned_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <formula>TEXT(Project_Name__r.Project_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Requisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruiting Requisition</label>
        <referenceTo>Recruiting_Requisition__c</referenceTo>
        <relationshipLabel>Assigned Resources</relationshipLabel>
        <relationshipName>Assigned_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Duration_Weeks__c</fullName>
        <label>Resource Duration (Weeks)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_End_Date_Aging__c</fullName>
        <formula>TODAY() -  Resource_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource End Date Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_End_Date__c</fullName>
        <formula>(Resource_Start_Date__c) + (Resource_Duration_Weeks__c) * 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Start_Date__c</fullName>
        <label>Resource Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <inlineHelpText>Choose "Reserved" when Opp Stage = Qualifying, Pursue, Bid, Negotiation 
Choose "Assigned" when Opp Stage = Closed Won and Project Not yet Started 
Choose "Active" when Project is Active and Resource has a Start Date assigned for the project</inlineHelpText>
        <label>Resource Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Rolled Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <formula>Role__r.Role_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Role as mentioned in the Pricing Sheet</inlineHelpText>
        <label>Role Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Location__c</fullName>
        <description>Where is the country of resource role's work location?</description>
        <label>Role Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>India w/Travel to US</fullName>
                </value>
                <value>
                    <fullName>Not Specified</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Hyderabad w/ Travel to US</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_On_Project__c</fullName>
        <label>Role On Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Delivery Manager</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer HTML5 Sr</fullName>
                </value>
                <value>
                    <fullName>Developer Java WS/SF QA/SF Dev</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Practice Architect</fullName>
                </value>
                <value>
                    <fullName>Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>QA </fullName>
                </value>
                <value>
                    <fullName>Scrum Master</fullName>
                </value>
                <value>
                    <fullName>Scrum Master Jr</fullName>
                </value>
                <value>
                    <fullName>SF Admin</fullName>
                </value>
                <value>
                    <fullName>SF App Architect</fullName>
                </value>
                <value>
                    <fullName>SF App Builder</fullName>
                </value>
                <value>
                    <fullName>SF Associate Admin</fullName>
                </value>
                <value>
                    <fullName>SF Associate Developer</fullName>
                </value>
                <value>
                    <fullName>SF Consultant</fullName>
                </value>
                <value>
                    <fullName>SF Designer</fullName>
                </value>
                <value>
                    <fullName>SF Developer</fullName>
                </value>
                <value>
                    <fullName>SF Developer Lead</fullName>
                </value>
                <value>
                    <fullName>SF Developer Lightning Specialist</fullName>
                </value>
                <value>
                    <fullName>SF Integration Architect</fullName>
                </value>
                <value>
                    <fullName>SF PM</fullName>
                </value>
                <value>
                    <fullName>SF Project Coordinator</fullName>
                </value>
                <value>
                    <fullName>SF Quality Analyst</fullName>
                </value>
                <value>
                    <fullName>SF Quality Automation Engineer</fullName>
                </value>
                <value>
                    <fullName>SF Sr. Admin</fullName>
                </value>
                <value>
                    <fullName>SF Sr. Developer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <referenceTo>Role__c</referenceTo>
        <relationshipLabel>Assigned Resources</relationshipLabel>
        <relationshipName>Assigned_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Assigned Resource</label>
    <nameField>
        <displayFormat>Resource-{0000}</displayFormat>
        <label>Resource No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Resource_Status__c</columns>
        <columns>Role_Description__c</columns>
        <columns>Percent_Allocation__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Resource_Start_Date__c</columns>
        <columns>Resource_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Practice_Resource__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Project_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Assigned Resources by Status</label>
    </listViews>
    <listViews>
        <fullName>Billable_Assigned_Resources</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Billable__c</columns>
        <columns>Percent_Allocation__c</columns>
        <columns>Resource_Duration_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Billable Assigned Resources</label>
    </listViews>
    <listViews>
        <fullName>Practice_Resources</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Percent_Allocation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Practice_Resource__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Practice Resource Allocations</label>
    </listViews>
    <validationRules>
        <fullName>Dates_between_Resources_and_Role</fullName>
        <active>true</active>
        <description>Neither 'Resource Start Date nor 'Resource End Date' of the Assigned Resource should be outside the range of 'Role Start Date' &amp; 'Role End Date'.</description>
        <errorConditionFormula>OR(Resource_Start_Date__c   &lt;   Role__r.Role_Start_Date__c, Resource_End_Date__c   &gt; Role__r.Role_End_Date__c)</errorConditionFormula>
        <errorMessage>Resource Start or End date cannot exceed Role Start/End date</errorMessage>
    </validationRules>
</CustomObject>